[gd_scene load_steps=18 format=3 uid="uid://cegib01n2cftr"]

[ext_resource type="Shader" uid="uid://bf8m3jpehiedj" path="res://Chars/darktar/hitflash.tres" id="1_7f83b"]
[ext_resource type="Script" path="res://Chars/armoz/armoz.gd" id="2_65q4b"]
[ext_resource type="Texture2D" uid="uid://dgb3nbnh4xal" path="res://Chars/armoz/armoz.png" id="2_166vm"]
[ext_resource type="PackedScene" uid="uid://df56ggibg66c4" path="res://Chars/components/harm_box_comp.tscn" id="3_a33pp"]
[ext_resource type="PackedScene" uid="uid://biyeoy2vdy2vl" path="res://Chars/components/hit_box_comp.tscn" id="4_6k7oc"]
[ext_resource type="PackedScene" uid="uid://djs2661afaea0" path="res://Chars/components/health_comp.tscn" id="5_yt67d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ulp1w"]
resource_local_to_scene = true
shader = ExtResource("1_7f83b")
shader_parameter/enabled = false
shader_parameter/ColorParameter = Color(1, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxbwj"]
atlas = ExtResource("2_166vm")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5igs1"]
atlas = ExtResource("2_166vm")
region = Rect2(0, 16, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vrmv1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxbwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5igs1")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_lwmb7"]
resource_name = "flyin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33, 0.66, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.2, 1.8), Vector2(1.8, 2.2), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_q8svd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ew56r"]
_data = {
"RESET": SubResource("Animation_q8svd"),
"flyin": SubResource("Animation_lwmb7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mjgm3"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fi4k6"]
radius = 9.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y88ku"]
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3ivs8"]
radius = 46.0

[node name="Armoz" type="CharacterBody2D" groups=["armoz"]]
material = SubResource("ShaderMaterial_ulp1w")
collision_layer = 24
collision_mask = 8
script = ExtResource("2_65q4b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_vrmv1")
autoplay = "default"
frame_progress = 0.927645

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ew56r")
}
autoplay = "flyin"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_mjgm3")

[node name="HarmBoxComp" parent="." instance=ExtResource("3_a33pp")]
alwaysActive = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarmBoxComp"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_fi4k6")

[node name="HitBoxComp" parent="." node_paths=PackedStringArray("health_comp") instance=ExtResource("4_6k7oc")]
collision_layer = 16
collision_mask = 16
health_comp = NodePath("../HealthComp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComp"]
shape = SubResource("CapsuleShape2D_y88ku")

[node name="HealthComp" parent="." instance=ExtResource("5_yt67d")]
MAX_HEALTH = 1.0

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_3ivs8")

[node name="targetCd" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="timeout" from="targetCd" to="." method="_on_target_cd_timeout"]
